--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>临歌枣酿|枣酿饮品|枣醋</title>
-    <meta content="临歌枣酿,枣酿饮品,枣醋,红枣红酒,红枣白酒,枣醋饮品,国果实业有限公司" name="keywords"/>
-    <meta content="国果实业有限公司生产的临歌枣酿,枣酿饮品,枣醋等深受广大消费者的好评,产业链涉及天然原枣产品、红枣醋饮品、红枣红酒、红枣白酒的研发及销售。 " name="description"/>
+    <meta content="临歌枣酿,枣酿饮品,枣醋,红枣红酒,红枣白酒,枣醋饮品" name="keywords"/>
+    <meta content="临歌枣酿,枣酿饮品,枣醋等深受广大消费者的好评,产业链涉及天然原枣产品、红枣醋饮品、红枣红酒、红枣白酒的研发及销售。 " name="description"/>
 
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
     <link rel="stylesheet" type="text/css" href="css/jquery.jslides.css" media="screen"/>
@@ -44,7 +44,7 @@
         <div id="dh">
             <div id="b01">
                 <ul>
-                    <li><a href='#' onclick="javascript:window.external.AddFavorite('http://www.zgbnfr.com/','临歌枣酿')"
+                    <li><a href='#' onclick="javascript:window.external.AddFavorite('','临歌枣酿')"
                            title="将本站加如您的收藏夹">收藏本站</a></li>
                     <li><a href=""> 微信</a></li>
                     <li><a href="#">网上商城</a></li>
@@ -53,7 +53,7 @@
             <div id="dh2">
                 <ul>
                     <li><a href="/index.html">首页</a></li>
-                    <li><a href="/about.html">关于我们</a></li>
+                    <li><a href="/lianxi.html">关于我们</a></li>
 
                     <li><a href="/chanpin.html">产品展示</a></li>
                     <li><a href="/wenhua.html">枣酿文化</a></li>
@@ -71,23 +71,16 @@
 <!--begin main-->
 <div id="full-screen-slider">
     <ul id="slides">
-        <li style="background:url('image/ab01.jpg') no-repeat center top"><a href="http://www.zgbnfr.com"
+        <li style="background:url('image/ab01.jpg') no-repeat center top"><a href=" "
                                                                              target="_blank"></a></li>
-        <li style="background:url('image/ab02.jpg') no-repeat center top"><a href="http://www.zgbnfr.com"
+        <li style="background:url('image/ab02.jpg') no-repeat center top"><a href=""
                                                                              target="_blank"></a></li>
-        <li style="background:url('image/ab03.jpg') no-repeat center top"><a href="http://www.zgbnfr.com"
+        <li style="background:url('image/ab03.jpg') no-repeat center top"><a href=""
                                                                              target="_blank"></a></li>
-        <li style="background:url('image/ab04.jpg') no-repeat center top"><a href="http://www.zgbnfr.com"
+        <li style="background:url('image/ab04.jpg') no-repeat center top"><a href=""
                                                                              target="_blank"></a></li>
 
     </ul>
-</div>
-<div id="cgg"><span>
-        <img title="山西临歌枣酿饮品醋饮系列" alt="山西临歌枣酿饮品醋饮系列"
-                                                                                 src="/uploadfile/2014/0812/20140812122238110.jpg"/></span>
-    <span><img
-        title="山西临县原生态大红干鲜枣" alt="山西临县原生态大红干鲜枣" src="/uploadfile/2014/0812/20140812122314464.jpg"/></span>
-
 </div>
 <div id="bodynr">
 
@@ -112,7 +105,7 @@
         <div id="qygk_bt"><img src="image/ch03.jpg" alt="公司简介"/></div>
         <div id="qygk_nr">山西临歌枣酿生物科技有限公司&mdash;&mdash;位于素有&ldquo;表里河山&rdquo;、&ldquo;中国红枣之乡&rdquo;的山西临县。这里属于典型的黄土高原，西隔黄河，沟壑纵横，独特的地理环境造就了如歌如画的高坡风光、生动朴实的乡土人情、自然天育的原生态红枣。<br/>
             国果实业有限公司是由山西临歌枣酿生物科技有限公司、国果商学院青年创业基地、山西新农商联文化传媒有限公司、山西百年丰润果业股份有限公司、国果庄园管理有限公司（筹建）、山西飞龙国际旅行社有限公司（筹建）共同出资联合打造的以&ldquo;公司+基地+农户&rdquo;的产业化管理&hellip;&hellip;公司以当地8000年的红枣文化和山西3000年的酿造技术
-            <a href="http://www.zgbnfr.com/about.html">------更多内容</a><img height="100" alt="" width="280" align="right"
+            <a href="http://www.zgbnfr.com/lianxi.html">------更多内容</a><img height="100" alt="" width="280" align="right"
                                                                           src="/uploadfile/2014/0605/20140605102837750.jpg"/>
         </div>
     </div>
@@ -161,10 +154,10 @@
     </div>
 </div>
 <!--end main-->
-<div id="copyright">国实果业有限公司 &nbsp;地址:山西省太原市高新区高新国际A座一楼 &nbsp;电话:0351-7858737 &nbsp;400-075-6678 &nbsp;&nbsp;
+
+<div id="copyright"> 临歌枣酿华北总代理 &nbsp;地址:XXX &nbsp;电话:13930441816 &nbsp;&nbsp;
 
 </div>
-<script language="JavaScript" src="http://code.54kefu.net/kefu/js/158/676358.js" type="text/javascript"
-        charset="utf-8"></script>
+
 </body>
 </html>
