--- a/pinpai.html
+++ b/pinpai.html
@@ -3,10 +3,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>联系方式_联系方式</title>
-    <meta content="联系方式" name="keywords"/>
-    <meta content="国果实业有限公司
-" name="description"/>
+    <title>临歌枣酿品牌形象_品牌形象_国果实业有限公司</title>
+    <meta content="品牌形象,临歌枣酿,农商联合" name="keywords"/>
+    <meta content="品牌形象 山西临歌枣酿生物科技有限公司 地址：山西省太原市高新区高新国际A座一楼 销售电话：0351-7858373  服务电话：400-075-6678" name="description"/>
 
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
     <link rel="stylesheet" type="text/css" href="css/jquery.jslides.css" media="screen"/>
@@ -45,10 +44,10 @@
         <div id="dh">
             <div id="b01">
                 <ul>
-                    <li><a href='#' onclick="javascript:window.external.AddFavorite('http://www.zgbnfr.com/','临歌枣酿')"
+                    <li><a href='#' onclick="javascript:window.external.AddFavorite('','临歌枣酿')"
                            title="将本站加如您的收藏夹">收藏本站</a></li>
-
-
+                    <li><a href="http://weibo.com/bainianfr/profile?rightmod=1&wvr=5&mod=personnumber"> 新浪微博</a></li>
+                    <li><a href="#">网上商城</a></li>
                 </ul>
             </div>
             <div id="dh2">
@@ -88,21 +87,33 @@
             </div>
         </div>
         <div class="nry_right">
-            <div id="weizhi">当前位置：<a href="/index.html">首页</a> > <a href="/lianxi.html">联系方式</a></div>
-            <div class="neirong"><h1>联系方式</h1>
+            <div id="weizhi">当前位置：<a href="/index.html">首页</a> > <a href="/pinpai.html">品牌形象</a></div>
+            <div class="neirong"><h1>临歌枣酿品牌形象</h1>
                 <!--正文-->
-                <strong>枣酿华北总代理<br/>
-                </strong>地址：石家庄<br/>
-                销售电话：13930441816 <br/>
-
-
-            </div>
+                <img alt="" src="/uploadfile/2014/0604/20140604115214721.jpg"/><br/>
+                <img alt="" src="/uploadfile/2014/0604/20140604115232740.jpg"/><img
+                        src="/uploadfile/2014/0615/20140615101618209.jpg" alt=""/><img
+                        src="/uploadfile/2014/0615/20140615101712638.jpg" alt=""/><img alt=""
+                                                                                       src="/uploadfile/2014/0604/20140604115340927.jpg"/><img
+                        alt="" src="/uploadfile/2014/0604/20140604115355194.jpg"/><img alt=""
+                                                                                       src="/uploadfile/2014/0604/20140604115409203.jpg"/><img
+                        alt="" src="/uploadfile/2014/0604/20140604115426705.jpg"/><img alt=""
+                                                                                       src="/uploadfile/2014/0604/20140604115441338.jpg"/><img
+                        alt="" src="/uploadfile/2014/0604/20140604115452891.jpg"/><img alt=""
+                                                                                       src="/uploadfile/2014/0604/20140604115510855.jpg"/><img
+                        alt="" src="/uploadfile/2014/0604/20140604115526316.jpg"/><img alt=""
+                                                                                       src="/uploadfile/2014/0604/20140604115542933.jpg"/><br/>
+                <img src="/uploadfile/2014/0615/20140615100326545.jpg" width="680" height="566" alt=""/><br/>
+                <img src="/uploadfile/2014/0615/20140615101947455.jpg" width="680" alt=""/><br/>
+                <br/>
+                <br/></div>
         </div>
     </div>
-    <!--end main-->
-    <div id="copyright"> 临歌枣酿华北总代理 &nbsp;地址:XXX &nbsp;电话:13930441816 &nbsp;&nbsp;
+</div>
+<!--end main-->
+<div id="copyright"> 临歌枣酿华北总代理 &nbsp;地址:XXX &nbsp;电话:13930441816 &nbsp;&nbsp;
 
-    </div>
+</div>
 
 </body>
 </html>
